src/main/gen/com/plugin/drool/parser/DroolsParser.java
// This is a generated file. Not intended for manual editing.
package com.plugin.drool.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.plugin.drool.psi.DroolsTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class DroolsParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return droolsFile(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // ACCUMULATE_KEYWORD LEFT_PAREN pattern COMMA accumulateFunction+ RIGHT_PAREN
  public static boolean accumElement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "accumElement")) return false;
    if (!nextTokenIs(builder_, ACCUMULATE_KEYWORD)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ACCUM_ELEMENT, null);
    result_ = consumeTokens(builder_, 1, ACCUMULATE_KEYWORD, LEFT_PAREN);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, pattern(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, COMMA)) && result_;
    result_ = pinned_ && report_error_(builder_, accumElement_4(builder_, level_ + 1)) && result_;
    result_ = pinned_ && consumeToken(builder_, RIGHT_PAREN) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // accumulateFunction+
  private static boolean accumElement_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "accumElement_4")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = accumulateFunction(builder_, level_ + 1);
    while (result_) {
      int pos_ = current_position_(builder_);
      if (!accumulateFunction(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "accumElement_4", pos_)) break;
    }
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // IDENTIFIER LEFT_PAREN expressionContent RIGHT_PAREN
  public static boolean accumulateFunction(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "accumulateFunction")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, IDENTIFIER, LEFT_PAREN);
    result_ = result_ && expressionContent(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RIGHT_PAREN);
    exit_section_(builder_, marker_, ACCUMULATE_FUNCTION, result_);
    return result_;
  }

  /* ********************************************************** */
  // AGENDA_GROUP_KEYWORD attributeValue
  public static boolean agendaGroupAttribute(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "agendaGroupAttribute")) return false;
    if (!nextTokenIs(builder_, AGENDA_GROUP_KEYWORD)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, AGENDA_GROUP_ATTRIBUTE, null);
    result_ = consumeToken(builder_, AGENDA_GROUP_KEYWORD);
    pinned_ = result_; // pin = 1
    result_ = result_ && attributeValue(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // LEFT_BRACKET RIGHT_BRACKET
  public static boolean arrayBrackets(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arrayBrackets")) return false;
    if (!nextTokenIs(builder_, LEFT_BRACKET)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, LEFT_BRACKET, RIGHT_BRACKET);
    exit_section_(builder_, marker_, ARRAY_BRACKETS, result_);
    return result_;
  }

  /* ********************************************************** */
  // NUMBER | STRING | IDENTIFIER | TRUE_KEYWORD | FALSE_KEYWORD
  public static boolean attributeValue(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attributeValue")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ATTRIBUTE_VALUE, "<attribute value>");
    result_ = consumeToken(builder_, NUMBER);
    if (!result_) result_ = consumeToken(builder_, STRING);
    if (!result_) result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = consumeToken(builder_, TRUE_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, FALSE_KEYWORD);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // AUTO_FOCUS_KEYWORD attributeValue?
  public static boolean autoFocusAttribute(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "autoFocusAttribute")) return false;
    if (!nextTokenIs(builder_, AUTO_FOCUS_KEYWORD)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, AUTO_FOCUS_ATTRIBUTE, null);
    result_ = consumeToken(builder_, AUTO_FOCUS_KEYWORD);
    pinned_ = result_; // pin = 1
    result_ = result_ && autoFocusAttribute_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // attributeValue?
  private static boolean autoFocusAttribute_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "autoFocusAttribute_1")) return false;
    attributeValue(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // bindingVariable COLON factPattern
  public static boolean bindingPattern(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "bindingPattern")) return false;
    if (!nextTokenIs(builder_, DOLLAR)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = bindingVariable(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, COLON);
    result_ = result_ && factPattern(builder_, level_ + 1);
    exit_section_(builder_, marker_, BINDING_PATTERN, result_);
    return result_;
  }

  /* ********************************************************** */
  // DOLLAR IDENTIFIER
  public static boolean bindingVariable(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "bindingVariable")) return false;
    if (!nextTokenIs(builder_, DOLLAR)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, DOLLAR, IDENTIFIER);
    exit_section_(builder_, marker_, BINDING_VARIABLE, result_);
    return result_;
  }

  /* ********************************************************** */
  // blockContentToken+
  public static boolean blockContent(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "blockContent")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _COLLAPSE_, BLOCK_CONTENT, "<block content>");
    result_ = blockContentToken(builder_, level_ + 1);
    while (result_) {
      int pos_ = current_position_(builder_);
      if (!blockContentToken(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "blockContent", pos_)) break;
    }
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // IDENTIFIER | NUMBER | STRING | OPERATOR | DOT | COMMA | COLON | DOLLAR | SEMICOLON
  //                              | LEFT_PAREN expressionContent? RIGHT_PAREN
  //                              | LEFT_BRACE blockContent? RIGHT_BRACE
  //                              | LEFT_BRACKET expressionContent? RIGHT_BRACKET
  //                              | NEW_KEYWORD | NULL_KEYWORD | TRUE_KEYWORD | FALSE_KEYWORD | THIS_KEYWORD
  //                              | NOT_KEYWORD | AND_KEYWORD | OR_KEYWORD | FROM_KEYWORD
  //                              | IF_KEYWORD | ELSE_KEYWORD | RETURN_KEYWORD
  //                              | INSERT_KEYWORD | INSERT_LOGICAL_KEYWORD | UPDATE_KEYWORD
  //                              | MODIFY_KEYWORD | RETRACT_KEYWORD | DELETE_KEYWORD
  //                              | MATCHES_KEYWORD | CONTAINS_KEYWORD | MEMBER_OF_KEYWORD
  //                              | IN_KEYWORD | EVAL_KEYWORD | COLLECT_KEYWORD | ACCUMULATE_KEYWORD
  static boolean blockContentToken(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "blockContentToken")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = consumeToken(builder_, NUMBER);
    if (!result_) result_ = consumeToken(builder_, STRING);
    if (!result_) result_ = consumeToken(builder_, OPERATOR);
    if (!result_) result_ = consumeToken(builder_, DOT);
    if (!result_) result_ = consumeToken(builder_, COMMA);
    if (!result_) result_ = consumeToken(builder_, COLON);
    if (!result_) result_ = consumeToken(builder_, DOLLAR);
    if (!result_) result_ = consumeToken(builder_, SEMICOLON);
    if (!result_) result_ = blockContentToken_9(builder_, level_ + 1);
    if (!result_) result_ = blockContentToken_10(builder_, level_ + 1);
    if (!result_) result_ = blockContentToken_11(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, NEW_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, NULL_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, TRUE_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, FALSE_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, THIS_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, NOT_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, AND_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, OR_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, FROM_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, IF_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, ELSE_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, RETURN_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, INSERT_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, INSERT_LOGICAL_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, UPDATE_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, MODIFY_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, RETRACT_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, DELETE_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, MATCHES_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, CONTAINS_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, MEMBER_OF_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, IN_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, EVAL_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, COLLECT_KEYWORD);
    if (!result_) result_ = consumeToken(builder_, ACCUMULATE_KEYWORD);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // LEFT_PAREN expressionContent? RIGHT_PAREN
  private static boolean blockContentToken_9(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "blockContentToken_9")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LEFT_PAREN);
    result_ = result_ && blockContentToken_9_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RIGHT_PAREN);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // expressionContent?
  private static boolean blockContentToken_9_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "blockContentToken_9_1")) return false;
    expressionContent(builder_, level_ + 1);
    return true;
  }

  // LEFT_BRACE blockContent? RIGHT_BRACE
  private static boolean blockContentToken_10(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "blockContentToken_10")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LEFT_BRACE);
    result_ = result_ && blockContentToken_10_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RIGHT_BRACE);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // blockContent?
  private static boolean blockContentToken_10_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "blockContentToken_10_1")) return false;
    blockContent(builder_, level_ + 1);
    return true;
  }

  // LEFT_BRACKET expressionContent? RIGHT_BRACKET
  private static boolean blockContentToken_11(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "blockContentToken_11")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LEFT_BRACKET);
    result_ = result_ && blockContentToken_11_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RIGHT_BRACKET);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }
